--- a/projet_app_web_commerce/WebContent/WEB-INF/web.xml
+++ b/projet_app_web_commerce/WebContent/WEB-INF/web.xml
@@ -24,4 +24,10 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+
+	<mime-mapping>
+		<extension>png</extension>
+		<mime-type>image/png</mime-type>
+	</mime-mapping>
+	
 </web-app>
