--- a/projet_app_web_commerce/WebContent/WEB-INF/web.xml
+++ b/projet_app_web_commerce/WebContent/WEB-INF/web.xml
@@ -33,6 +33,6 @@
 	</mime-mapping>
 
 	<welcome-file-list>
-		<welcome-file>gestionCategories.xhtml</welcome-file>
+		<welcome-file>authentification.xhtml</welcome-file>
 	</welcome-file-list>
 </web-app>
