--- a/projet_app_web_commerce/WebContent/WEB-INF/web.xml
+++ b/projet_app_web_commerce/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 		<param-name>javax.faces.CONFIG_FILES</param-name>
 		<param-value>/WEB-INF/faces-config.xml</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
@@ -32,7 +32,29 @@
 		<mime-type>image/png</mime-type>
 	</mime-mapping>
 
+
+	<filter-mapping>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping>
+
+	<filter>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+		<init-param>
+			<param-name>thresholdSize</param-name>
+			<param-value>51200</param-value>
+		</init-param>
+
+		<init-param>
+			<param-name>uploadDirectory</param-name>
+			<param-value>/projet_app_web_commerce/WebContent/resources/images</param-value>
+		</init-param>
+	</filter>
+
+
+
 	<welcome-file-list>
-		<welcome-file>authentification.xhtml</welcome-file>
+		<welcome-file>accueil.xhtml</welcome-file>
 	</welcome-file-list>
 </web-app>
