--- a/projet_app_web_commerce/WebContent/WEB-INF/web.xml
+++ b/projet_app_web_commerce/WebContent/WEB-INF/web.xml
@@ -29,6 +29,6 @@
 
 
 	<welcome-file-list>
-		<welcome-file>accueil.xhtml</welcome-file>
+		<welcome-file>Magasin.xhtml</welcome-file>
 	</welcome-file-list>
 </web-app>
