--- a/projet_app_web_commerce/WebContent/WEB-INF/web.xml
+++ b/projet_app_web_commerce/WebContent/WEB-INF/web.xml
@@ -7,6 +7,12 @@
 	<display-name>projet_app_web_commerce</display-name>
 
 	<context-param>
+		<param-name>file-upload</param-name>
+		<param-value>/resources/images</param-value>
+		
+	</context-param>
+
+	<context-param>
 		<param-name>javax.faces.CONFIG_FILES</param-name>
 		<param-value>/WEB-INF/faces-config.xml</param-value>
 	</context-param>
