--- a/projet_app_web_commerce/.classpath
+++ b/projet_app_web_commerce/.classpath
@@ -8,5 +8,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/giovanni/Desktop/FormationJAVA/Toolbox/ServletAPI/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
