--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\Mathieu THOMAS\\Desktop\\Nouveau dossier\\projet_app_web_commerce","type":"PROJECT","hints":{"PROJECT_NAME":"projet_app_web_commerce"}},"ABSENT"]]
